// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayCreationMenuDropdown should render a creation menu dropdown with 7 favorite items and more button when more than 7 favorite items are passed 1`] = `
<div class="dropdown">
  <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-primary" type="button">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
      <title>plus</title>
      <use xlink:href="icons.svg#plus"></use>
    </svg>
  </button>
</div>
<div class="dropdown-menu" ref="menu">
  <form>
    <div class="inline-scroller">
      <ul class="list-unstyled">
        <li>
          <a class=" dropdown-item" href="#main1">main1</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main2">main2</a>
        </li>
        <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
        <li class="dropdown-subheader" role="presentation">Favorites</li>
        <li>
          <a class=" dropdown-item" href="#favorite1">favorite1</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#favorite2">favorite2</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#favorite3">favorite3</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#favorite4">favorite4</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#favorite5">favorite5</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#favorite6">favorite6</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#favorite7">favorite7</a>
        </li>
      </ul>
    </div>
    <div class="dropdown-caption">Showing 9 of 10 elements</div>
    <div class="dropdown-section">
      <button class="btn btn-block btn-secondary" type="button">More</button>
    </div>
  </form>
</div>
`;

exports[`ClayCreationMenuDropdown should render a creation menu dropdown with 8 main items and more button when more than 8 main items and at least one favorite item are passed 1`] = `
<div class="dropdown">
  <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-primary" type="button">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
      <title>plus</title>
      <use xlink:href="icons.svg#plus"></use>
    </svg>
  </button>
</div>
<div class="dropdown-menu" ref="menu">
  <form>
    <div class="inline-scroller">
      <ul class="list-unstyled">
        <li>
          <a class=" dropdown-item" href="#main1">main1</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main2">main2</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main3">main3</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main4">main4</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main5">main5</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main6">main6</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main7">main7</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main8">main8</a>
        </li>
        <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
        <li class="dropdown-subheader" role="presentation">Favorites</li>
        <li>
          <a class=" dropdown-item" href="#favorite1">favorite1</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#favorite2">favorite2</a>
        </li>
      </ul>
    </div>
    <div class="dropdown-caption">Showing 10 of 12 elements</div>
    <div class="dropdown-section">
      <button class="btn btn-block btn-secondary" type="button">More</button>
    </div>
  </form>
</div>
`;

exports[`ClayCreationMenuDropdown should render a creation menu dropdown with 15 main items and more button when more than 15 main items and at no favorite item are passed 1`] = `
<div class="dropdown">
  <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-primary" type="button">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
      <title>plus</title>
      <use xlink:href="icons.svg#plus"></use>
    </svg>
  </button>
</div>
<div class="dropdown-menu" ref="menu">
  <form>
    <div class="inline-scroller">
      <ul class="list-unstyled">
        <li>
          <a class=" dropdown-item" href="#main1">main1</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main2">main2</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main3">main3</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main4">main4</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main5">main5</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main6">main6</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main7">main7</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main8">main8</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main9">main9</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main10">main10</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main11">main11</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main12">main12</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main13">main13</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main14">main14</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#main15">main15</a>
        </li>
      </ul>
    </div>
    <div class="dropdown-caption">Showing 15 of 20 elements</div>
    <div class="dropdown-section">
      <button class="btn btn-block btn-secondary" type="button">More</button>
    </div>
  </form>
</div>
`;

exports[`ClayCreationMenuDropdown should render a creation menu dropdown with classes 1`] = `
<div class="dropdown my-custom-class">
  <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-primary" type="button">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
      <title>plus</title>
      <use xlink:href="icons.svg#plus"></use>
    </svg>
  </button>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item" href="#main1">main1</a>
    </li>
    <li>
      <a class=" dropdown-item" href="#main2">main2</a>
    </li>
  </ul>
</div>
`;

exports[`ClayCreationMenuDropdown should render a creation menu dropdown with favorite items 1`] = `
<div class="dropdown">
  <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-primary" type="button">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
      <title>plus</title>
      <use xlink:href="icons.svg#plus"></use>
    </svg>
  </button>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item" href="#main1">main1</a>
    </li>
    <li>
      <a class=" dropdown-item" href="#main2">main2</a>
    </li>
    <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
    <li class="dropdown-subheader" role="presentation">Favorites</li>
    <li>
      <a class=" dropdown-item" href="#favorite1">favorite1</a>
    </li>
    <li>
      <a class=" dropdown-item" href="#favorite2">favorite2</a>
    </li>
  </ul>
</div>
`;

exports[`ClayCreationMenuDropdown should render a creation menu dropdown with id 1`] = `
<div class="dropdown" id="myId">
  <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-primary" type="button">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
      <title>plus</title>
      <use xlink:href="icons.svg#plus"></use>
    </svg>
  </button>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item" href="#main1">main1</a>
    </li>
    <li>
      <a class=" dropdown-item" href="#main2">main2</a>
    </li>
  </ul>
</div>
`;

exports[`ClayCreationMenuDropdown should render a disabled creation menu dropdown 1`] = `
<div class="dropdown">
  <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-primary" disabled="" type="button">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
      <title>plus</title>
      <use xlink:href="icons.svg#plus"></use>
    </svg>
  </button>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item" href="#main1">main1</a>
    </li>
    <li>
      <a class=" dropdown-item" href="#main2">main2</a>
    </li>
  </ul>
</div>
`;

exports[`ClayCreationMenuDropdown should render an expanded creation menu dropdown 1`] = `
<div class="dropdown show">
  <button aria-expanded="true" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-primary" type="button">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
      <title>plus</title>
      <use xlink:href="icons.svg#plus"></use>
    </svg>
  </button>
</div>
<div class="dropdown-menu show" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item" href="#main1">main1</a>
    </li>
    <li>
      <a class=" dropdown-item" href="#main2">main2</a>
    </li>
  </ul>
</div>
`;

exports[`ClayCreationMenuDropdown should render default markdown 1`] = `
<div class="dropdown">
  <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-primary" type="button">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
      <title>plus</title>
      <use xlink:href="icons.svg#plus"></use>
    </svg>
  </button>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item" href="#main1">main1</a>
    </li>
    <li>
      <a class=" dropdown-item" href="#main2">main2</a>
    </li>
  </ul>
</div>
`;
